--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB STUDIO</title>
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/modern-nomalize.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -32,13 +30,19 @@
         </nav>
         <ul class="contact-list">
           <li class="item">
-            <a href="mailto:info@example.com" class="link-mail"
-              >info@devstudio.com
+            <a href="mailto:info@example.com" class="link-mail">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span>
             </a>
           </li>
           <li class="item">
-            <a href="tel:+3809611111113" class="link-mail">
-              +38 096 111 11 11</a
+            <a href="tel:380961111111" class="link">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              <span>+38 096 111 11 11</span></a
             >
           </li>
         </ul>
@@ -183,26 +187,57 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <a href="/" class="footer-logo">
-          <span class="logo">Web</span>Studio
-        </a>
-        <address>
-          <ul>
+        <div>
+          <a href="/" class="footer-logo">
+            <span class="logo">Web</span>Studio
+          </a>
+          <address class="address">
+            <ul>
+              <li class="item">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+              </li>
+              <li class="item">
+                <a href="mailto:info@example.com" class="footer-text"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+3809611111113" class="footer-text"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social">
+          <p class="social-text">Присоединяйтесь</p>
+          <ul class="list social-list">
             <li class="item">
-              <p>г. Киев, пр-т Леси Украинки, 26</p>
+              <a href="" class="link" aria-label="instagram">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+              ></a>
             </li>
             <li class="item">
-              <a href="mailto:info@example.com" class="footer-text"
-                >info@example.com</a
-              >
+              <a href="" class="link" aria-label="twitter">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use></svg
+              ></a>
             </li>
             <li class="item">
-              <a href="tel:+3809611111113" class="footer-text"
-                >+38 099 111 11 11</a
-              >
+              <a href="" class="link" aria-label="facebook">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="linkedin">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
