--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB STUDIO</title>
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/modern-nomalize.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/portfolio.css" />
-    <link rel="stylesheet" href="./css/variables.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -32,14 +30,20 @@
         </nav>
         <ul class="contact-list">
           <li class="item">
-            <a href="mailto:info@example.com" class="link-mail"
-              >info@devstudio.com
+            <a href="mailto:info@example.com" class="link-mail">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              <span>info@devstudio.com</span>
             </a>
           </li>
           <li class="item">
             <a href="tel:+3809611111113" class="link-mail">
-              +38 096 111 11 11</a
-            >
+              <svg class="icon" width="16" height="12">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              <span>+38 096 111 11 11</span>
+            </a>
           </li>
         </ul>
       </div>
@@ -71,13 +75,14 @@
           <!-- галерея проэктов -->
           <ul class="portfolio-card">
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/Технокряко.jpg"
-                  alt="Технокряко"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/Технокряко.jpg"
+                    alt="Технокряко"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Технокряко</h3>
@@ -85,13 +90,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/Постер.jpg"
-                  alt="Постер"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/Постер.jpg"
+                    alt="Постер"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">
@@ -101,13 +107,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/РесторанSeafood.jpg"
-                  alt="РесторанSeafood"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/РесторанSeafood.jpg"
+                    alt="РесторанSeafood"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Ресторан Seafood</h3>
@@ -115,13 +122,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/ПроектPrime.jpg"
-                  alt="ПроектPrime"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/ПроектPrime.jpg"
+                    alt="ПроектPrime"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Проект Prime</h3>
@@ -129,13 +137,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/ПроектBoxes.jpg"
-                  alt="ПроектBoxes"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/ПроектBoxes.jpg"
+                    alt="ПроектBoxes"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Проект Boxes</h3>
@@ -143,13 +152,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/InspirationhasnoBorders.jpg"
-                  alt="InspirationhasnoBorders"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/InspirationhasnoBorders.jpg"
+                    alt="InspirationhasnoBorders"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Inspiration has no Borders</h3>
@@ -157,13 +167,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/ИзданиеLimitedEdition.jpg"
-                  alt="ИзданиеLimitedEdition"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/ИзданиеLimitedEdition.jpg"
+                    alt="ИзданиеLimitedEdition"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Издание Limited Edition</h3>
@@ -171,13 +182,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/ПроектLAB.jpg"
-                  alt="ПроектLAB"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/ПроектLAB.jpg"
+                    alt="ПроектLAB"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Проект LAB</h3>
@@ -185,13 +197,14 @@
               </div>
             </li>
             <li class="item">
-              <div class="portfolio-img">
-                <img
-                  src="./images/GrowingBusiness.jpg"
-                  alt="GrowingBusiness"
-                  width="370"
-                  height="294"
-                />
+              <div class="portfolio-tumb">
+                <a href="">
+                  <img
+                    src="./images/GrowingBusiness.jpg"
+                    alt="GrowingBusiness"
+                    width="370"
+                    height="294"
+                /></a>
               </div>
               <div class="portfolio-text">
                 <h3 class="portfolio-title">Growing Business</h3>
@@ -205,26 +218,57 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <a href="/" class="footer-logo">
-          <span class="logo">Web</span>Studio
-        </a>
-        <address>
-          <ul>
+        <div>
+          <a href="/" class="footer-logo">
+            <span class="logo">Web</span>Studio
+          </a>
+          <address class="address">
+            <ul>
+              <li class="item">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+              </li>
+              <li class="item">
+                <a href="mailto:info@example.com" class="footer-text"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+3809611111113" class="footer-text"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social">
+          <p class="social-text">Присоединяйтесь</p>
+          <ul class="list social-list">
             <li class="item">
-              <p>г. Киев, пр-т Леси Украинки, 26</p>
+              <a href="" class="link" aria-label="instagram">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+              ></a>
             </li>
             <li class="item">
-              <a href="mailto:info@example.com" class="footer-text"
-                >info@example.com</a
-              >
+              <a href="" class="link" aria-label="twitter">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use></svg
+              ></a>
             </li>
             <li class="item">
-              <a href="tel:+3809611111113" class="footer-text"
-                >+38 099 111 11 11</a
-              >
+              <a href="" class="link" aria-label="facebook">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="linkedin">
+                <svg class="icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
