добавлены иконки в приимущества

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           <li class="item">
             <a href="mailto:info@example.com" class="link-mail">
               <svg class="icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               <span>info@devstudio.com</span>
             </a>
@@ -40,7 +40,7 @@
           <li class="item">
             <a href="tel:+3809611111113" class="link-mail">
               <svg class="icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               <span>+38 096 111 11 11</span>
             </a>
@@ -76,7 +76,7 @@
           <ul class="portfolio-card">
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/Технокряко.jpg"
                     alt="Технокряко"
@@ -91,7 +91,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/Постер.jpg"
                     alt="Постер"
@@ -108,7 +108,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/РесторанSeafood.jpg"
                     alt="РесторанSeafood"
@@ -123,7 +123,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/ПроектPrime.jpg"
                     alt="ПроектPrime"
@@ -138,7 +138,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/ПроектBoxes.jpg"
                     alt="ПроектBoxes"
@@ -153,7 +153,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/InspirationhasnoBorders.jpg"
                     alt="InspirationhasnoBorders"
@@ -168,7 +168,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/ИзданиеLimitedEdition.jpg"
                     alt="ИзданиеLimitedEdition"
@@ -183,7 +183,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/ПроектLAB.jpg"
                     alt="ПроектLAB"
@@ -198,7 +198,7 @@
             </li>
             <li class="item">
               <div class="portfolio-tumb">
-                <a href="">
+                <a href="" class="link">
                   <img
                     src="./images/GrowingBusiness.jpg"
                     alt="GrowingBusiness"
@@ -246,25 +246,25 @@
             <li class="item">
               <a href="" class="link" aria-label="instagram">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="" class="link" aria-label="twitter">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use></svg
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="" class="link" aria-label="facebook">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use></svg
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="" class="link" aria-label="linkedin">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
