--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li class="item">
             <a href="mailto:info@example.com" class="link-mail">
               <svg class="icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               <span>info@devstudio.com</span>
             </a>
@@ -40,7 +40,7 @@
           <li class="item">
             <a href="tel:380961111111" class="link">
               <svg class="icon" width="16" height="12">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               <span>+38 096 111 11 11</span></a
             >
@@ -65,6 +65,11 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="priority-list">
             <li class="item">
+              <div class="priority-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="priority-title">Внимание к деталям</h3>
               <p class="priority-par">
                 Идейные соображения, а также начало повседневной работы по
@@ -72,6 +77,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="priority-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="priority-title">Пунктуальность</h3>
               <p class="priority-par">
                 Задача организации, в особенности же рамки и место обучения
@@ -79,6 +89,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="priority-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="priority-title">Планирование</h3>
               <p class="priority-par">
                 Равным образом консультация с широким активом в значительной
@@ -86,6 +101,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="priority-icon">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="priority-title">Современные технологии</h3>
               <p class="priority-par">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -136,6 +156,34 @@
               <div class="team-content">
                 <h3 class="team-title-li">Игорь Демьяненко</h3>
                 <p class="team-par">Product Designer</p>
+                <ul class="team-social-list">
+                  <li class="item">
+                    <a href="" class="link" aria-label="instagram">
+                      <svg class="icon">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="item">
+                    <a href="" class="link" aria-label="twitter">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="item">
+                    <a href="" class="link" aria-label="facebook">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="item">
+                    <a href="" class="link" aria-label="linkedin">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -215,25 +263,25 @@
             <li class="item">
               <a href="" class="link" aria-label="instagram">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="" class="link" aria-label="twitter">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use></svg
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="" class="link" aria-label="facebook">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use></svg
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="item">
               <a href="" class="link" aria-label="linkedin">
                 <svg class="icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
