добавлены соц сети команды и постоянные клиенты

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
           </ul>
         </div>
       </section>
-
       <!-- Team -->
       <section class="team">
         <div class="container">
@@ -152,38 +151,44 @@
                   width="270"
                   height="260"
                 />
-              </div>
-              <div class="team-content">
-                <h3 class="team-title-li">Игорь Демьяненко</h3>
-                <p class="team-par">Product Designer</p>
-                <ul class="team-social-list">
-                  <li class="item">
-                    <a href="" class="link" aria-label="instagram">
-                      <svg class="icon">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="item">
-                    <a href="" class="link" aria-label="twitter">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg
-                    ></a>
-                  </li>
-                  <li class="item">
-                    <a href="" class="link" aria-label="facebook">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg
-                    ></a>
-                  </li>
-                  <li class="item">
-                    <a href="" class="link" aria-label="linkedin">
-                      <svg class="icon">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg
-                    ></a>
-                  </li>
-                </ul>
+                <div class="team-content">
+                  <h3 class="team-title-li">Игорь Демьяненко</h3>
+                  <p class="team-par">Product Designer</p>
+                  <ul class="team-social-list">
+                    <li class="item">
+                      <a href="" class="link" aria-label="instagram">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="twitter">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="facebook">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="linkedin">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -194,10 +199,44 @@
                   width="270"
                   height="260"
                 />
-              </div>
-              <div class="team-content">
-                <h3 class="team-title-li">Ольга Репина</h3>
-                <p class="team-par">Frontend Developer</p>
+                <div class="team-content">
+                  <h3 class="team-title-li">Ольга Репина</h3>
+                  <p class="team-par">Frontend Developer</p>
+                  <ul class="team-social-list">
+                    <li class="item">
+                      <a href="" class="link" aria-label="instagram">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="twitter">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="facebook">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="linkedin">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -208,10 +247,44 @@
                   width="270"
                   height="260"
                 />
-              </div>
-              <div class="team-content">
-                <h3 class="team-title-li">Николай Тарасов</h3>
-                <p class="team-par">Marketing</p>
+                <div class="team-content">
+                  <h3 class="team-title-li">Николай Тарасов</h3>
+                  <p class="team-par">Marketing</p>
+                  <ul class="team-social-list">
+                    <li class="item">
+                      <a href="" class="link" aria-label="instagram">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="twitter">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="facebook">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="linkedin">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -222,11 +295,89 @@
                   width="270"
                   height="260"
                 />
+                <div class="team-content">
+                  <h3 class="team-title-li">Михаил Ермаков</h3>
+                  <p class="team-par">UI Designer</p>
+                  <ul class="team-social-list">
+                    <li class="item">
+                      <a href="" class="link" aria-label="instagram">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-instagram"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="twitter">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-twitter"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="facebook">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-facebook"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="item">
+                      <a href="" class="link" aria-label="linkedin">
+                        <svg class="icon">
+                          <use
+                            href="./images/icons.svg#icon-linkedin"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <div class="team-content">
-                <h3 class="team-title-li">Михаил Ермаков</h3>
-                <p class="team-par">UI Designer</p>
-              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- постоянные клинты -->
+      <section class="deal clients">
+        <div class="container">
+          <h2 class="deal-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="item">
+              <a href="" class="link" aria-label="Клиент 1">
+                <svg class="icon" width="45" height="50">
+                  <use href="./images/icons.svg#icon-logo-client1"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="Клиент 2">
+                <svg class="icon" width="40" height="52">
+                  <use href="./images/icons.svg#icon-logo-client2"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="Клиент 3">
+                <svg class="icon" width="41" height="43">
+                  <use href="./images/icons.svg#icon-logo-client3"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="Клиент 4">
+                <svg class="icon" width="80" height="42">
+                  <use href="./images/icons.svg#icon-logo-client4"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="Клиент 5">
+                <svg class="icon" width="59" height="47">
+                  <use href="./images/icons.svg#icon-logo-client5"></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="Клиент 6">
+                <svg class="icon" width="89" height="45">
+                  <use href="./images/icons.svg#icon-logo-client6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
