--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="item">
-            <a href="tel:380961111111" class="link">
+            <a href="tel:380961111111" class="link-mail">
               <svg class="icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
