--- a/portfolio.html
+++ b/portfolio.html
@@ -75,141 +75,150 @@
           <!-- галерея проэктов -->
           <ul class="portfolio-card">
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/Технокряко.jpg"
                     alt="Технокряко"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Технокряко</h3>
-                <p class="portfolio-par">Веб-сайт</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Технокряко</h3>
+                  <p class="portfolio-par">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/Постер.jpg"
                     alt="Постер"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h3>
-                <p class="portfolio-par">Дизайн</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="portfolio-par">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/РесторанSeafood.jpg"
                     alt="РесторанSeafood"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                <p class="portfolio-par">Приложение</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Ресторан Seafood</h3>
+                  <p class="portfolio-par">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/ПроектPrime.jpg"
                     alt="ПроектPrime"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Проект Prime</h3>
-                <p class="portfolio-par">Маркетинг</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проект Prime</h3>
+                  <p class="portfolio-par">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/ПроектBoxes.jpg"
                     alt="ПроектBoxes"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Проект Boxes</h3>
-                <p class="portfolio-par">Приложение</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проект Boxes</h3>
+                  <p class="portfolio-par">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/InspirationhasnoBorders.jpg"
                     alt="InspirationhasnoBorders"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                <p class="portfolio-par">Веб-сайт</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                  <p class="portfolio-par">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/ИзданиеLimitedEdition.jpg"
                     alt="ИзданиеLimitedEdition"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Издание Limited Edition</h3>
-                <p class="portfolio-par">Дизайн</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Издание Limited Edition</h3>
+                  <p class="portfolio-par">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/ПроектLAB.jpg"
                     alt="ПроектLAB"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Проект LAB</h3>
-                <p class="portfolio-par">Маркетинг</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Проект LAB</h3>
+                  <p class="portfolio-par">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="portfolio-tumb">
-                <a href="" class="link">
+              <a href="">
+                <div class="portfolio-tumb">
                   <img
                     src="./images/GrowingBusiness.jpg"
                     alt="GrowingBusiness"
                     width="370"
                     height="294"
-                /></a>
-              </div>
-              <div class="portfolio-text">
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-par">Приложение</p>
-              </div>
+                  />
+                </div>
+                <div class="portfolio-text">
+                  <h3 class="portfolio-title">Growing Business</h3>
+                  <p class="portfolio-par">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
